<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_score"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.edu.eci.pdam.ahorcado.controllers.ScoreActivity">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/txt_titulo"
        android:textSize="50sp"
        tools:layout_editor_absoluteX="128dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/subtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:gravity="center"
        android:text="@string/txt_subtitulo"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="121dp" />

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitulo"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="54dp"
        android:layout_toLeftOf="@+id/titulo"
        android:layout_toStartOf="@+id/titulo"
        android:text="@string/nombre"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/puntaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puntos_default"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/nombre"
        android:layout_alignBottom="@+id/nombre"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp" />
</RelativeLayout>
