<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_juego"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/xera"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.edu.eci.pdam.ahorcado.controllers.JuegoActivity">

    <TextView
        android:id="@+id/txt_puntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/puntos_default"
        android:textColor="@color/textColorPortal" />

    <TextView
        android:id="@+id/lbl_puntos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_toLeftOf="@+id/txt_puntos"
        android:layout_toStartOf="@+id/txt_puntos"
        android:text="@string/txt_puntos"
        android:textColor="@color/textColorPortal" />

    <TextView
        android:id="@+id/txt_intentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lbl_puntos"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="48dp"
        android:text="@string/lbl_intento"
        android:textColor="@color/textColorPortal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txt_palabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/txt_puntos"
        android:layout_alignLeft="@+id/txt_intentos"
        android:layout_alignRight="@+id/txt_puntos"
        android:layout_alignStart="@+id/txt_intentos"
        android:layout_below="@+id/txt_intentos"
        android:layout_marginTop="45dp"
        android:text="@string/txt_palabra"
        android:textColor="@color/textColorPortal"
        android:textSize="25sp" />
</RelativeLayout>
